data/derived/fa15/progs/unify/prog2594.ml.out
Characters 139-140:
  ( ((x1+x2) / 10) :: 0, (x1+x2) mod 10 )
                      ^
Error: This expression has type int but an expression was expected of type
         int list
